
- ~'ordered~
  cards are reviewed file by file, in the order they appear within the
  file
- ~'shuffled~
  cards are reviewed in a randomized order

This corresponds to setting the existing ~org-fc-shuffle-positions~
variable to ~nil~ or ~t~ respectively, the only change being that this
can now be customized for each review context.

*** Internal

The internal data structures representing files, cards and positions
of cards have now use ~eieio~ classes.

The way org-fc reads and writes the contents of the ~:REVIEW_DATA:~
drawer has been changed as a first step towards supporting alternative
spacing algorithms.

To reduce the chance that bugs are introduced by this and future
changes of the code, end-to-end tests have been added to ensure
different functions of org-fc correctly change the org-mode contents
of flashcards.

** 0.3.2

*** Added

- Custom titles for the back heading can be configured via the
  ~org-fc-back-heading-titles~ variable.

  See [[./docs/card_types.org]] for instructions on how to add new titles.

** 0.3.1

*** Fixed

The dashboard should now correctly handles local variables and should
work as expected again.

** 0.3.0

*** Changed

The dashboard has been changed and split into collapsible sections,
some of which are visible from the start while others can be opened on
demand.

** 0.2.0
*** Added

- The ~org-fc-type-cloze-dwim~ command that can be used to mark regions
  in a file as cloze holes (contributed by Github user c1-g)

*** Fixed

- Results of the AWK indexer are parsed in a way that prevents an
  issue where some files would get ignored when indexing many files at
  once (contributed by Github user mithraen)

- The ~find~ command for searching org-mode files was improved to
  ignore directories with a name ending in =.org= (contributed by
  Github user vedang)

- When updating the review data drawer, ~delete-region~ is used
  instead of ~kill-region~ to avoid polluting the clipboard/kill-ring
  (contributed by sr.ht user bram85)
